--- a/index.html
+++ b/index.html
@@ -1,17 +1,140 @@
-{\rtf1\ansi\ansicpg936\cocoartf2761
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;\red234\green233\blue111;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;\cssrgb\c93333\c92157\c50980;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zifan (Eric) Zhao - Academic Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            text-align: center;
+            padding: 20px 0;
+        }
+        .content {
+            max-width: 800px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        h2 {
+            color: #555;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        .contact-info a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
 
-\f0\fs34 \cf2 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec3 <!DOCTYPE html>\
-<html>\
-<body>\
-<h1>Hello World</h1>\
-<p>I'm hosted with GitHub Pages.</p>\
-</body>\
-</html>\
-}
+<header>
+    <h1>Zifan (Eric) Zhao</h1>
+    <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+</header>
+
+<div class="content">
+    <section>
+        <h2>Contact Information</h2>
+        <p>Lane 533 Jiming Road, Shanghai 200126, China</p>
+        <p>Phone: +86 152-1438-2218</p>
+        <p>Email: <a href="mailto:zz4330@nyu.edu">zz4330@nyu.edu</a></p>
+        <p>GitHub: <a href="https://github.com/Exiam6" target="_blank">https://github.com/Exiam6</a></p>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+        <p><strong>NYU Shanghai, Shanghai, China</strong> <br> Expected Graduation: May 2026 <br> Major: Computer Science and Mathematics <br> GPA: 4.0/4.0</p>
+        <p><strong>Shanghai Foreign Language School, Shanghai, China</strong> <br> Graduation: June 2022</p>
+    </section>
+
+    <section>
+        <h2>Research Experience</h2>
+        <p><strong>Research Assistant, Dean’s Undergraduate Research Fund, NYU Shanghai</strong> <br> May 2023 - Present</p>
+        <ul>
+            <li>Lead research on Neural Collapse in Deep Learning and Computer Vision under the guidance of Prof. Keith Ross and Prof. Li Guo.</li>
+            <li>Contributed to the paper "Cross Entropy versus Label Smoothing: A Neural Collapse Perspective" currently under review by ICML.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Internship Experience</h2>
+        <p><strong>Research Intern, Electronic Group of the Development Research Center, GF Securities, Shanghai</strong> <br> Dec 2023 - Present</p>
+        <ul>
+            <li>Conducted market trends analysis, article summaries, technical summaries, data analysis, and report writing for semiconductor companies in the AI and semiconductor industry.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Extracurricular Experience</h2>
+        <p><strong>Chair, ACM Student Chapter, NYU Shanghai</strong> <br> Sep 2023 - Present</p>
+        <ul>
+            <li>Established the ACM Student Chapter, organizing academic and industry workshops.</li>
+            <li>Promoted collaboration with East China Normal University, NYUSH CSDSE, and Kaggle ACE for student participation in ICPC and Kaggle.</li>
+        </ul>
+        <p><strong>Vice President, Digital Innovation Community, NYU Shanghai</strong> <br> Nov 2022 - Present</p>
+        <ul>
+            <li>Led a team to organize the Digital Innovation Challenge Fall 2023, focusing on LLM, with over 350 participants.</li>
+            <li>Maintained the event's webpage and engaged with departments and industry experts.</li>
+        </ul>
+        <p><strong>Vice President, Astronomy Club, NYU Shanghai</strong> <br> Oct 2022 - Present</p>
+        <ul>
+            <li>Organized field trips, star gazing events, and workshops on planetary introductions.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on Bilibili.</li>
+            <li>Designed and maintained webpages for Digital Innovation Challenge and ACM Chapter on an independent server.</li>
+            <li>Designed a neural network called LimboNet and won first place in the CS360 Machine Learning Final Competition.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Volunteer Experience</h2>
+        <ul>
+            <li><strong>Shanghai Animal Rescue, Shanghai</strong> <br> Oct 2022: Looked after cats and dogs, communicated with adopters to ensure comfortable living spaces for pets.</li>
+            <li><strong>World Artificial Intelligence Conference, Shanghai</strong> <br> July 2023: Promoted AI products and facilitated collaboration with Shanghai Artificial Intelligence Laboratory at the open-source marketplace of WAIC.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Computer Skills:</strong> Python, C++, R, Linux, LaTeX, Keynote, Canva, Microsoft Office, WordPress</li>
+            <li><strong>Languages:</strong> English (Fluent), Mandarin (Native Speaker)</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Billiards, Badminton, Boxing, Skiing, Stargazing, Hiking</li>
+        </ul>
+    </section>
+</div>
+
+</body>
+</html>
