--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         .contact-info a:hover {
             text-decoration: underline;
         }
+        .contact-info {
+            position: relative;
+        }
+        .contact-info img {
+            float: right;
+            margin-left: 20px;
+            max-width: 200px;
+            height: auto;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
@@ -54,13 +64,15 @@
 </header>
 
 <div class="content">
-    <section>
+    <section class="contact-info">
         <h2>Contact Information</h2>
+        <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Picture of Zifan (Eric) Zhao">
         <p>Lane 533 Jiming Road, Shanghai 200126, China</p>
         <p>Phone: +86 152-1438-2218</p>
         <p>Email: <a href="mailto:zz4330@nyu.edu">zz4330@nyu.edu</a></p>
         <p>GitHub: <a href="https://github.com/Exiam6" target="_blank">https://github.com/Exiam6</a></p>
     </section>
+
 
     <section>
         <h2>Education</h2>
