--- a/index.html
+++ b/index.html
@@ -9,26 +9,53 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 0 20px;
+            padding: 0;
             background-color: #f4f4f4;
         }
         header {
             text-align: center;
             padding: 20px 0;
+            background-color: #333;
+            color: white;
         }
-        .content {
-            max-width: 800px;
+        .container {
+            max-width: 1000px;
             margin: 20px auto;
-            background: white;
             padding: 20px;
+            background: white;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        h1 {
+        h1, h2 {
             color: #333;
         }
-        h2 {
-            color: #555;
+        .contact-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .contact-info img {
+            max-width: 200px;
+            height: auto;
+            border-radius: 8px;
+        }
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            margin-bottom: 40px;
         }
         ul {
             list-style-type: none;
@@ -36,23 +63,6 @@
         }
         li {
             margin: 5px 0;
-        }
-        .contact-info a {
-            color: #0073e6;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-        .contact-info {
-            position: relative;
-        }
-        .contact-info img {
-            float: right;
-            margin-left: 2px;
-            max-width: 200px;
-            height: auto;
-            border-radius: 8px;
         }
     </style>
 </head>
@@ -63,59 +73,47 @@
     <p>Computer Science and Mathematics Student | NYU Shanghai</p>
 </header>
 
-<div class="content">
+<nav>
+    <a href="#publications">Publications</a>
+    <a href="#education">Education</a>
+    <a href="#projects">Projects</a>
+    <a href="#photography">Photography</a>
+    <a href="#blogs">Blogs</a>
+</nav>
+
+<div class="container">
+
     <section class="contact-info">
-        <h2>Contact Information</h2>
+        <div>
+            <h2>Contact Information</h2>
+            <p>Lane 533 Jiming Road, Shanghai 200126, China</p>
+            <p>Phone: +86 152-1438-2218</p>
+            <p>Email: <a href="mailto:zz4330@nyu.edu">zz4330@nyu.edu</a></p>
+            <p>GitHub: <a href="https://github.com/Exiam6" target="_blank">https://github.com/Exiam6</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/zifan-zhao-1a2984191/" target="_blank">https://www.linkedin.com/in/zifan-zhao-1a2984191/</a></p>
+            <p>Google Scholar: <a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">https://scholar.google.com/citations?user=PWVoKaoAAAAJ</a></p>
+        </div>
         <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Picture of Zifan (Eric) Zhao">
-        <p>Lane 533 Jiming Road, Shanghai 200126, China</p>
-        <p>Phone: +86 152-1438-2218</p>
-        <p>Email: <a href="mailto:zz4330@nyu.edu">zz4330@nyu.edu</a></p>
-        <p>GitHub: <a href="https://github.com/Exiam6" target="_blank">https://github.com/Exiam6</a></p>
     </section>
 
+    <section id="publications">
+        <h2>Publications</h2>
+        <p>Details about your publications will go here.</p>
+        <ul>
+            <li>Publication 1: Title, Journal/Conference, Year</li>
+            <li>Publication 2: Title, Journal/Conference, Year</li>
+            <li>Publication 3: Title, Journal/Conference, Year</li>
+            <!-- Add more publications as needed -->
+        </ul>
+    </section>
 
-    <section>
+    <section id="education">
         <h2>Education</h2>
         <p><strong>NYU Shanghai, Shanghai, China</strong> <br> Expected Graduation: May 2026 <br> Major: Computer Science and Mathematics <br> GPA: 4.0/4.0</p>
         <p><strong>Shanghai Foreign Language School, Shanghai, China</strong> <br> Graduation: June 2022</p>
     </section>
 
-    <section>
-        <h2>Research Experience</h2>
-        <p><strong>Research Assistant, Dean’s Undergraduate Research Fund, NYU Shanghai</strong> <br> May 2023 - Present</p>
-        <ul>
-            <li>Lead research on Neural Collapse in Deep Learning and Computer Vision under the guidance of Prof. Keith Ross and Prof. Li Guo.</li>
-            <li>Contributed to the paper "Cross Entropy versus Label Smoothing: A Neural Collapse Perspective" currently under review by ICML.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Internship Experience</h2>
-        <p><strong>Research Intern, Electronic Group of the Development Research Center, GF Securities, Shanghai</strong> <br> Dec 2023 - Present</p>
-        <ul>
-            <li>Conducted market trends analysis, article summaries, technical summaries, data analysis, and report writing for semiconductor companies in the AI and semiconductor industry.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Extracurricular Experience</h2>
-        <p><strong>Chair, ACM Student Chapter, NYU Shanghai</strong> <br> Sep 2023 - Present</p>
-        <ul>
-            <li>Established the ACM Student Chapter, organizing academic and industry workshops.</li>
-            <li>Promoted collaboration with East China Normal University, NYUSH CSDSE, and Kaggle ACE for student participation in ICPC and Kaggle.</li>
-        </ul>
-        <p><strong>Vice President, Digital Innovation Community, NYU Shanghai</strong> <br> Nov 2022 - Present</p>
-        <ul>
-            <li>Led a team to organize the Digital Innovation Challenge Fall 2023, focusing on LLM, with over 350 participants.</li>
-            <li>Maintained the event's webpage and engaged with departments and industry experts.</li>
-        </ul>
-        <p><strong>Vice President, Astronomy Club, NYU Shanghai</strong> <br> Oct 2022 - Present</p>
-        <ul>
-            <li>Organized field trips, star gazing events, and workshops on planetary introductions.</li>
-        </ul>
-    </section>
-
-    <section>
+    <section id="projects">
         <h2>Projects</h2>
         <ul>
             <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on Bilibili.</li>
@@ -124,28 +122,22 @@
         </ul>
     </section>
 
-    <section>
-        <h2>Volunteer Experience</h2>
+    <section id="photography">
+        <h2>Photography</h2>
+        <p>This section can include a gallery or links to your photography work.</p>
+        <p>Example: <a href="https://example.com/photography" target="_blank">View my photography portfolio</a></p>
+    </section>
+
+    <section id="blogs">
+        <h2>Blogs</h2>
+        <p>Links to blog posts or a feed of your latest blog entries could go here.</p>
         <ul>
-            <li><strong>Shanghai Animal Rescue, Shanghai</strong> <br> Oct 2022: Looked after cats and dogs, communicated with adopters to ensure comfortable living spaces for pets.</li>
-            <li><strong>World Artificial Intelligence Conference, Shanghai</strong> <br> July 2023: Promoted AI products and facilitated collaboration with Shanghai Artificial Intelligence Laboratory at the open-source marketplace of WAIC.</li>
+            <li><a href="https://example.com/blog-post-1" target="_blank">Blog Post 1 Title</a></li>
+            <li><a href="https://example.com/blog-post-2" target="_blank">Blog Post 2 Title</a></li>
+            <li><a href="https://example.com/blog-post-3" target="_blank">Blog Post 3 Title</a></li>
         </ul>
     </section>
 
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Computer Skills:</strong> Python, C++, R, Linux, LaTeX, Keynote, Canva, Microsoft Office, WordPress</li>
-            <li><strong>Languages:</strong> English (Fluent), Mandarin (Native Speaker)</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Hobbies</h2>
-        <ul>
-            <li>Billiards, Badminton, Boxing, Skiing, Stargazing, Hiking</li>
-        </ul>
-    </section>
 </div>
 
 </body>
