--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
     </section>
 
     <section id="publications">
-        <h2>Publications</h2>
+        <h2>Selected Publications</h2>
         <p>Details about your publications will go here.</p>
         <ul>
             <li>Publication 1: Title, Journal/Conference, Year</li>
             <li>Publication 2: Title, Journal/Conference, Year</li>
             <li>Publication 3: Title, Journal/Conference, Year</li>
-            <!-- Add more publications as needed -->
         </ul>
     </section>
 
