--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
 
     <section class="contact-info">
         <div>
-            <p>Email: <a href="mailto:zz4330@nyu.edu">zz4330@nyu.edu</a></p>
-            <p>GitHub: <a href="https://github.com/Exiam6" target="_blank">GitHub Profile</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/zifan-zhao-1a2984191/" target="_blank">LinkedIn Profile</a></p>
-            <p>Google Scholar: <a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar Profile</a></p>
+            <p><a href="mailto:zz4330@nyu.edu">Email</a></p>
+            <p><a href="https://github.com/Exiam6" target="_blank">GitHub</a></p>
+            <p><a href="https://www.linkedin.com/in/zifan-zhao-1a2984191/" target="_blank">LinkedIn</a></p>
+            <p><a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a></p>
         </div>
         <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Picture of Zifan (Eric) Zhao">
     </section>
+
 
     <section class="intro">
         <p>Hi, my name is Zifan (Eric) Zhao, a junior student major in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Visualization of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
