--- a/blogs.html
+++ b/blogs.html
@@ -27,12 +27,7 @@
 <body>
 
 <h1>Blogs</h1>
-<p>Links to blog posts or a feed of your latest blog entries could go here.</p>
-<ul>
-    <li><a href="https://example.com/blog-post-1" target="_blank">Blog Post 1 Title</a></li>
-    <li><a href="https://example.com/blog-post-2" target="_blank">Blog Post 2 Title</a></li>
-    <li><a href="https://example.com/blog-post-3" target="_blank">Blog Post 3 Title</a></li>
-</ul>
+<p>Work In progress.</p>
 
 </body>
 </html>
