--- a/publications.html
+++ b/publications.html
@@ -22,16 +22,22 @@
         li {
             margin: 5px 0;
         }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 
 <h1>Publications</h1>
 <ul>
-    <li>Publication 1: Title, Journal/Conference, Year</li>
-    <li>Publication 2: Title, Journal/Conference, Year</li>
-    <li>Publication 3: Title, Journal/Conference, Year</li>
-    <!-- Add more publications as needed -->
+    <li><strong>Cross Entropy versus Label Smoothing: A Neural Collapse Perspective</strong><br>
+    Li Guo, Keith Ross, Zifan Zhao, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
+    <a href="https://arxiv.org/abs/2402.03979" target="_blank">https://arxiv.org/abs/2402.03979</a></li>
 </ul>
 
 </body>
