--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         header {
             text-align: center;
             padding: 20px 0;
-            background-color: #333;
+            background-color: #f4f4f4;
             color: white;
         }
         .container {
