--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             background-color: #f4f4f4;
             color: white;
         }
+        header p {
+            color: #333
+        }
         .container {
             max-width: 1000px;
             margin: 20px auto;
