--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p><a href="https://www.linkedin.com/in/zifan-zhao-1a2984191/" target="_blank">LinkedIn</a></p>
             <p><a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a></p>
         </div>
-        <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Picture of Zifan (Eric) Zhao">
+        <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Need VPN to see my face LOL">
     </section>
 
 
