--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
         header {
             text-align: center;
             padding: 20px 0;
-            background-color: #f4f4f4;
+            background-color: #333;
             color: white;
-        }
-        header p {
-            color: #333
         }
         .container {
             max-width: 1000px;
@@ -30,7 +27,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #333;
+            color: #white;
         }
         .intro, .contact-info {
             margin-bottom: 40px;
