--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #white;
+            color: white;
         }
         .intro, .contact-info {
             margin-bottom: 40px;
