--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications - Zifan (Eric) Zhao</title>
+    <title>Zifan (Eric) Zhao - Academic Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,7 +27,10 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2 {
-            color: #333;
+            color: white;
+        }
+        .intro, .contact-info {
+            margin-bottom: 40px;
         }
         nav {
             background-color: #333;
@@ -44,19 +47,18 @@
         nav a:hover {
             text-decoration: underline;
         }
-        ul {
-            list-style-type: none;
-            padding: 0;
+        .contact-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        li {
-            margin: 5px 0;
+        .contact-info div {
+            max-width: 60%;
         }
-        a {
-            color: #0073e6;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
+        .contact-info img {
+            max-width: 200px;
+            height: auto;
+            border-radius: 8px;
         }
     </style>
 </head>
@@ -68,14 +70,12 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
     <a href="publications.html">Publications</a>
     <a href="education.html">Education</a>
     <a href="projects.html">Projects</a>
     <a href="photography.html">Photography</a>
     <a href="blogs.html">Blogs</a>
 </nav>
-
 <div class="container">
 
     <h1>Publications</h1>
