--- a/projects.html
+++ b/projects.html
@@ -3,35 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Zifan (Eric) Zhao</title>
+    <title>Zifan (Eric) Zhao - Academic Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background-color: #f4f4f4;
         }
-        h1 {
-            color: #333;
+        header {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: white;
         }
-        ul {
-            list-style-type: none;
-            padding: 0;
+        .container {
+            max-width: 1000px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        li {
-            margin: 5px 0;
+        h1, h2 {
+            color: white;
+        }
+        .intro, .contact-info {
+            margin-bottom: 40px;
+        }
+        nav {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .contact-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .contact-info div {
+            max-width: 60%;
+        }
+        .contact-info img {
+            max-width: 200px;
+            height: auto;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
 
-<h1>Projects</h1>
-<ul>
-    <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on Bilibili.</li>
-    <li>Designed and maintained webpages for Digital Innovation Challenge and ACM Chapter on an independent server.</li>
-    <li>Designed a neural network called LimboNet and won first place in the CS360 Machine Learning Final Competition.</li>
-</ul>
+<header>
+    <h1>Zifan (Eric) Zhao</h1>
+    <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+</header>
 
+<nav>
+    <a href="publications.html">Publications</a>
+    <a href="education.html">Education</a>
+    <a href="projects.html">Projects</a>
+    <a href="photography.html">Photography</a>
+    <a href="blogs.html">Blogs</a>
+</nav>
+<div class="container">
+    
+    <h1>Projects</h1>
+    <ul>
+        <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on Bilibili.</li>
+        <li>Designed and maintained webpages for Digital Innovation Challenge and ACM Chapter on an independent server.</li>
+        <li>Designed a neural network called LimboNet and won first place in the CS360 Machine Learning Final Competition.</li>
+    </ul>
+</div>
 </body>
 </html>
