--- a/publications.html
+++ b/publications.html
@@ -63,12 +63,14 @@
     </style>
 </head>
 <body>
-
-<header>
-    <h1>Zifan (Eric) Zhao</h1>
-    <p>Computer Science and Mathematics Student | NYU Shanghai</p>
-</header>
-
+    
+<a href="index.html">
+    <header>
+        <h1>Zifan (Eric) Zhao</h1>
+        <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+    </header>
+</a>
+    
 <nav>
     <a href="publications.html">Publications</a>
     <a href="education.html">Education</a>
