--- a/education.html
+++ b/education.html
@@ -64,11 +64,12 @@
 </head>
 <body>
 
-<header>
-    <h1>Zifan (Eric) Zhao</h1>
-    <p>Computer Science and Mathematics Student | NYU Shanghai</p>
-</header>
-
+<a href="index.html">
+    <header>
+        <h1>Zifan (Eric) Zhao</h1>
+        <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+    </header>
+</a>
 <nav>
     <a href="publications.html">Publications</a>
     <a href="education.html">Education</a>
