--- a/photography.html
+++ b/photography.html
@@ -67,7 +67,7 @@
 <a href="index.html">
     <header>
         <h1>Zifan (Eric) Zhao</h1>
-        <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+        <p>Computer Science and Mathematics | NYU Shanghai</p>
     </header>
 </a>
 
