--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <header>
     <h1>Zifan (Eric) Zhao</h1>
-    <p>Computer Science and Mathematics Student | NYU Shanghai</p>
+    <p>Computer Science and Mathematics | NYU Shanghai</p>
 </header>
 
 <nav>
