--- a/photography.html
+++ b/photography.html
@@ -81,7 +81,7 @@
 <div class="container">
     
     <h1>Photography</h1>
-    <p>This section can include a gallery or links to your photography work. You might need a VPN to view the images</p>
+    <p>This section can include a gallery or links to my photography work. You might need a VPN to view the images</p>
     <p>View my photography portfolio</p>
 </div>
 </body>
