--- a/photography.html
+++ b/photography.html
@@ -81,7 +81,7 @@
 <div class="container">
     
     <h1>Photography</h1>
-    <p>View my photography portfolioYou might need a VPN to view the images</p>
+    <p>View my photography portfolio. You might need a VPN to view the images</p>
 </div>
 </body>
 </html>
