--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,8 @@
     
     <h1>Projects</h1>
     <ul>
-        <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on Bilibili.</li>
+        <li>Developed an AI chatbot integrating ChatGPT, VITS, and Live2D with over 320,000 views on 
+            <a href="https://www.bilibili.com/video/BV1hs4y1x7X5/" target="_blank">Bilibili</a>.</li>
         <li>Designed and maintained webpages for Digital Innovation Challenge and ACM Chapter on an independent server.</li>
         <li>Designed a neural network called LimboNet and won first place in the CS360 Machine Learning Final Competition.</li>
     </ul>
