--- a/index.html
+++ b/index.html
@@ -90,9 +90,27 @@
         <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Need VPN to see my face LOL">
     </section>
 
-
     <section class="intro">
         <p>Hi, my name is Zifan (Eric) Zhao, a junior student majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Visualization of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
+    </section>
+
+    <section class="news">
+        <h1>News</h1>
+        <p>2024.6 Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</p>
+    </section>
+
+    <section class="publications">
+        <h1>Publications</h1>
+        <ul>
+            <li><strong>Cross Entropy versus Label Smoothing: A Neural Collapse Perspective</strong><br>
+            Li Guo, Keith Ross, <u>Zifan Zhao</u>, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
+            <a href="https://arxiv.org/abs/2402.03979" target="_blank">https://arxiv.org/abs/2402.03979</a></li>
+        </ul>
+        <ul>
+            <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
+            <u>Zifan Zhao*</u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*<br>
+        </ul>
+        <p>* Indicates equal contribution.</p>
     </section>
 
 </div>
