--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
     </section>
 
     <section class="news">
-        <h1>News</h1>
-        <p>2024.6 Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</p>
+        <h1 style="color: grey;">News</h1>
+        <li><strong>· 2024-06:</strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
     </section>
 
     <section class="publications">
-        <h1>Publications</h1>
+        <h1 style="color: grey;">Publications</h1>
         <ul>
             <li><strong>Cross Entropy versus Label Smoothing: A Neural Collapse Perspective</strong><br>
             Li Guo, Keith Ross, <u>Zifan Zhao</u>, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
