--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <section class="news">
         <h1 style="color: grey;">News</h1>
-        <li><strong>· 2024-06:</strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
+        <li><strong>2024-06:</strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
     </section>
 
     <section class="publications">
