--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
 
     <section class="news">
         <h1 style="color: grey;">News</h1>
-        <li><strong>2024-06:</strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
+        <li><strong>2024-06: </strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
     </section>
 
     <section class="publications">
         <h1 style="color: grey;">Publications</h1>
         <ul>
             <li><strong>Cross Entropy versus Label Smoothing: A Neural Collapse Perspective</strong><br>
-            Li Guo, Keith Ross, <u>Zifan Zhao</u>, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
+            Li Guo, Keith Ross, <u><b>Zifan Zhao</b></u>, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
             <a href="https://arxiv.org/abs/2402.03979" target="_blank">https://arxiv.org/abs/2402.03979</a></li>
         </ul>
         <ul>
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
-            <u>Zifan Zhao*</u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*<br>
+            <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*<br>
         </ul>
         <p>* Indicates equal contribution.</p>
     </section>
