--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </ul>
         <ul>
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
-            <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*<br>
+            <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
         </ul>
         <p>* Indicates equal contribution.</p>
     </section>
