--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
             <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
         </ul>
-        <p>* Indicates equal contribution.</p>
+        <p>* indicates equal contribution.</p>
     </section>
 
 </div>
