--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <section class="intro">
-        <p>Hi, my name is Zifan (Eric) Zhao, a junior student majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Visualization of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
+        <p>Hi, my name is Zifan (Eric) Zhao, a junior student at NYUSH majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Visualization of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
     </section>
 
     <section class="news">
