--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         <ul>
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
             <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
+            <a href="https://arxiv.org/abs/2409.04180" target="_blank"> https://arxiv.org/abs/2409.04180</a></li>
+               
         </ul>
         <p>* indicates equal contribution.</p>
     </section>
