--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,13 @@
         Li Guo, Keith Ross, Zifan Zhao, George Andriopoulos, Shuyang Ling, Yufeng Xu, Zixuan Dong<br>
         <a href="https://arxiv.org/abs/2402.03979" target="_blank">https://arxiv.org/abs/2402.03979</a></li>
     </ul>
+    <ul>
+            <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
+            <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
+            <a href="https://arxiv.org/abs/2409.04180" target="_blank"> https://arxiv.org/abs/2409.04180</a></li>
+               
+    </ul>
+    <p>* indicates equal contribution.</p>
 
 </div>
 
