--- a/projects.html
+++ b/projects.html
@@ -86,6 +86,10 @@
             <a href="https://www.bilibili.com/video/BV1hs4y1x7X5/" target="_blank">Bilibili</a>.</li>
         <li>Designed and maintained webpages for Digital Innovation Challenge and ACM Chapter on an independent server.</li>
         <li>Designed a neural network called LimboNet and won first place in the CS360 Machine Learning Final Competition.</li>
+        <li>Investigated the long context inferencing ability between SSM(Mamba) and Transformer architectures.</li>
+        <li>Designed a multiodal RecSys called BabelNet that provide movie recommendations based on text,visual,audio and meta data.</li>
+        <li>Investigated the code and 3D model generation ability of GflowNet.</li>
+        <li>Built a multimodality biped raspberrypi robot MAXE which can chat and take corresponding action from movie Interstellar.</li>
     </ul>
 </div>
 </body>
