--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="news">
         <h1 style="color: grey;">News</h1>
         <li><strong>2024-06: </strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
-         <li><strong>2024-08: </strong> Our cute little <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">TARS</a> robot from Intersteller just made his first step! Discover more details here!</li>
+         <li><strong>2024-08: </strong> Our cute little TARS robot from Intersteller just made his first step! Have a look <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">here</a>!</li>
     </section>
 
     <section class="publications">
