--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
             <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
             <a href="https://arxiv.org/abs/2409.04180" target="_blank"> https://arxiv.org/abs/2409.04180</a></li>
-            <li><u><b>NIPS 2024</b></u><br>
+            <li><b>NIPS 2024</b><br>
                
         </ul>
         <p>* indicates equal contribution.</p>
