--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p><a href="https://www.linkedin.com/in/zifan-zhao-1a2984191/" target="_blank">LinkedIn</a></p>
             <p><a href="https://scholar.google.com/citations?user=PWVoKaoAAAAJ&hl=zh-CN&oi=sra" target="_blank">Google Scholar</a></p>
         </div>
-        <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Sydneypic.jpg?raw=true" alt="Need VPN to see my face LOL">
+        <img src="https://github.com/Exiam6/Exiam6.github.io/blob/main/Photo6.jpg?raw=true" alt="Need VPN to see my face LOL">
     </section>
 
     <section class="intro">
@@ -110,7 +110,7 @@
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
             <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
             <a href="https://arxiv.org/abs/2409.04180" target="_blank"> https://arxiv.org/abs/2409.04180</a></li>
-            <li><b>NIPS 2024</b><br>
+            <b>NIPS 2024</b><br>
                
         </ul>
         <p>* indicates equal contribution.</p>
