--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <section class="news">
         <h1 style="color: grey;">News</h1>
-        <li><strong>2024-09: </strong> Our <a href="https://arxiv.org/abs/2409.04180" target="_blank">paper</a> just got accepted by NeurIPS 2024. Can't wait to see everyone in Vancouver!</li>
+        <li><strong>2024-09: </strong> Our paper about  <a href="https://arxiv.org/abs/2409.04180" target="_blank">Neural Regression Collapse</a> just got accepted by NeurIPS 2024. Can't wait to see everyone in Vancouver!</li>
         <li><strong>2024-08: </strong> Our cute little TARS robot from Intersteller just made his first step! Have a look <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">here</a>!</li>
         <li><strong>2024-06: </strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
         
