--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section class="intro">
-        <p>Hi, my name is Zifan (Eric) Zhao, a junior student at NYUSH majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Visualization of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
+        <p>Hi, my name is Zifan (Eric) Zhao, a junior student at NYUSH majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Interpretability of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
     </section>
 
     <section class="news">
@@ -110,7 +110,7 @@
             <li><strong>The Prevalence of Neural Collapse in Neural Multivariate Regression</strong><br>
             <u><b>Zifan Zhao*</b></u>, Li Guo*, George Andriopoulos*, Zixuan Dong*, Keith Ross*†<br>
             <a href="https://arxiv.org/abs/2409.04180" target="_blank"> https://arxiv.org/abs/2409.04180</a></li>
-            <b>NIPS 2024</b><br>
+            <b>NeurIPS 2024</b><br>
                
         </ul>
         <p>* indicates equal contribution.</p>
