--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section class="intro">
-        <p>Hi, my name is Zifan (Eric) Zhao, a junior student at NYUSH majoring in Computer Science and Mathematics. My research interest lies in Multimodal AI, Embodied AI, and the Interpretability of DNNs. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I have some very interesting publications and research projects, please find them below!</p>
+        <p>Hi, my name is Zifan (Eric) Zhao, a junior student at NYUSH majoring in Computer Science and Mathematics. My research interest lies in embodied intelligence, multimodal representation learning and reinforcement learning. I’m the founding chair of <a href="https://nyush.acm.org/" target="_blank">NYUSH ACM Student Chapter</a> and organized the <a href="http://www.nyushdic.com/" target="_blank">Digital Innovation Challenge 2023</a>. I'm currently working with <a href="https://www.lerrelpinto.com/" target="_blank">Prof. Lerrel Pinto</a> in the General-purpose Robotics and AI Labs (GRAIL). I have some very interesting publications and research projects, please find them below!</p>
     </section>
 
     <section class="news">
