--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
     <section class="news">
         <h1 style="color: grey;">News</h1>
-        <li><strong>2025-04: </strong> One <a href="https://arxiv.org/abs/2402.03979" target="_blank">paper </a> is accepted by TMLR 2025.</li>
-        <li><strong>2024-09: </strong> One <a href="https://arxiv.org/abs/2409.04180" target="_blank">paper </a> is accepted by NeurIPS 2024. Can't wait to see everyone in Vancouver!</li>
+        <li><strong>2025-04: </strong> One <a href="https://arxiv.org/abs/2402.03979" target="_blank">paper </a> is accepted at TMLR 2025.</li>
+        <li><strong>2024-09: </strong> One <a href="https://arxiv.org/abs/2409.04180" target="_blank">paper </a> is accepted at NeurIPS 2024. Can't wait to see everyone in Vancouver!</li>
         <li><strong>2024-08: </strong> Our cute little TARS robot from Intersteller just made his first step! Have a look <a href="https://www.youtube.com/shorts/3q91EYxd1DA" target="_blank">here</a>!</li>
         <li><strong>2024-06: </strong> Thanks to NYUSH AI Interest Group for inviting me to give an introductory <a href="https://www.youtube.com/watch?v=OkSow8ejX7E&t=353s" target="_blank">talk</a> on Machine Learning!</li>
         
